tests/ui/error-codes/E0268.rs
fn main() {
    break; //~ ERROR E0268
}
